# autoinstall-cli

./: pyproject.toml
scripts/: docker  flutter  pgAdmin  pyenv  qgis  vscode
source/: __init__.py
source/frameworks_and_devices/cli/: __init__.py
