[tool.poetry]
name = "autoinstall-cli"
version = "0.1.4"
description = ""
authors = ["Marco Carmona <marcocarmonadev@outlook.com>"]
license = "MIT"
readme = "README.md"
packages = [{ "include" = "source" }]


[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.12.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
autoinstall = 'source:cli'
